static/styles/portico-signin.css
html {
    min-height: 500px;
}

.app-main .bg-image {
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100vw;
    height: 100vh;

    background-color: #fafafa;

    z-index: -1;
}

.flex {
    display: flex;
    height: calc(100vh - 100px);
    align-items: center;
    justify-content: center;
}

.flex.full-page {
    min-height: calc(100vh - 170px);
    height: auto;
}

.m-10 {
    margin: 10px;
}

.login-page-container,
.register-page-container,
.find-team-page-container,
.forgot-password-container,
#registration {
    position: relative;
    padding: 30px;
    min-width: 0px;

    background-color: #fff;
    box-shadow: 0px 0px 100px rgba(0,0,0,0.2);
}

.find-team-page-container #find_my_team i {
    font-size: 0.8em;
}

.login-page-container .group {
    margin: 0px 20px;
    display: inline-block;
}

.app-main .login-page-header {
    font-size: 1.5em;
    font-weight: 300;
    margin: 0px;
    height: 0px;
}

.login-page-container.dev-login {
    margin-top: 20px;
    border: none;
}

.login-page-container.dev-login .login-form {
    width: auto;
}

.new-style .login-page-container .alert {
    margin: 0;
    text-align: left;
    font-size: 0.7em;
    font-weight: 600;
}

.app-main .login-page-header {
    font-size: 1.5em;
    font-weight: 300;
    margin-top: 0px;
    transform: translateX(-15px) translateY(-60px);
    text-align: left;
}

.app-main .login-page-container.dev-login .login-page-header {
    height: auto;
    margin-top: 20px;
    transform: none;
    text-align: center;
}

.app-main .login-page-container.dev-login h2 {
    font-size: 1em;
    font-weight: 500;
}

.app-main .login-page-container .group {
    display: inline-block;
    vertical-align: top;

    margin: 0px 20px;
}

.app-main.forgot-password-container {
    font-weight: 400;
}

.app-main.find-team-page-container {
    width: 456px;
    font-weight: 400;
}

.find-team-page-container h3,
.forgot-password-container h3 {
    margin-top: 0px;

    font-weight: 300;
    font-size: 2em;
}

.forgot-password-container h3 {
    margin-bottom: 0px;
}

.forgot-password-container {
    width: 503px;
    margin-top: calc(50vh - 150px);
}

.forgot-password-container form {
    margin-bottom: 0px;
}

.header {
    padding: 15px 0px 15px 0px;
}

.header,
.header .stripes,
.header .darker {
    background: #fff;

    color: #444;
}

.header .top-links a,
.header .header-main .logo span {
    color: #444;
}

.header .header-main .logo .brand-logo circle {
    fill: #444 !important;
}

.header .header-main .logo .brand-logo path {
    fill: #fff !important;
    stroke: #fff !important;
}


.new-style {
    -webkit-font-smoothing: antialiased;
}

.register-form.new-style {
    text-align: left;
}

.register-form #errors {
    font-size: 0.8em;
    font-weight: 500;
    margin-bottom: 20px;
    margin-top: 10px;
}

.register-form #errors:empty {
    margin-top: 0px;
}

.register-account .terms-of-service .input-group {
    margin: 0px 0px 10px 10px;
}

.register-account .terms-of-service .submit-button-box button {
    margin-top: 0px;
}

.relative {
    position: relative;
}

.new-style .input-box {
    position: relative;
    display: inline-block;
    vertical-align: top;
}

#login_form .input-box {
    display: block;
}

.new-style .form-inline {
    margin: 0px;
}

.new-style button {
    display: inline-block;
    vertical-align: top;
    margin-top: 20px;
}

.new-style button.full-width {
    width: 100%;
}

.register-form button {
    margin-top: 25px;
}

.new-style .alert {
    padding: 0;
    margin-bottom: 0;

    font-weight: 500;
    font-size: 0.8em;
    line-height: 1.2;
    background-color: transparent;

    border: none;
    color: rgb(190, 88, 88);

}

.new-style .right-side .alert {
    max-width: 328px;
}

.new-style .input-box input[type=text],
.new-style .input-box input[type=email],
.new-style .input-box input[type=password] {
    padding: 13px 32px 11px 12px;
    margin-top: 25px;

    font-family: "Humbug";
    font-size: 1.2rem;

    width: 280px;

    border: 2px solid #ddd;
    box-shadow: none;
    border-radius: 0px;

    transition: border 0.3s ease;
}

.new-style .input-box label {
    position: absolute;
    top: 0px;
    left: 0%;

    margin-top: 5px;

    transition: all 0.3s ease;
}

.new-style .input-box.moving-label input[type=text]:invalid + label,
.new-style .input-box.moving-label input[type=email]:invalid + label,
.new-style .input-box.moving-label input[type=password]:invalid + label {
    left: 50%;
    transform: translateY(35px) translateX(-50%);
    font-size: 1.2rem;
    font-weight: 500;
    color: #aaa;

    pointer-events: none;
}

.new-style .input-box input[type=text]:focus:invalid,
.new-style .input-box input[type=email]:focus:invalid,
.new-style .input-box input[type=password]:focus:invalid {
    box-shadow: none;
    color: #444;
}

.new-style .input-box input[type=text]:focus,
.new-style .input-box input[type=email]:focus,
.new-style .input-box input[type=password]:focus {
    border: 2px solid #888;
}

.new-style .input-box input[required] ~ .required:after {
    /* content: "*"; */
    position: absolute;
    top: 25px;
    right: 5px;
    transform: translateY(8px);

    color: #d66a6a;
    font-size: 2em;
    font-weight: 300;
    transition: all 0.3s ease;
}

.new-style .input-box.no-validation input[required] ~ .required:after {
    visibility: hidden;
}

.new-style .input-box.horizontal button {
    margin-top: 25px;
}

.new-style .input-box input[required]:valid ~ .required:after {
    transform: translateY(0px);
    opacity: 0;
}

.new-style .input-box input[required] ~ .valid {
    position: absolute;
    top: 42px;
    right: 15px;
    width: 15px;
    transform: translateX(10px);
    opacity: 0;

    transition: all 0.3s ease;
}

.new-style .input-box input[required]:valid ~ .valid {
    opacity: 1;
    transform: translateX(0);
}
/* ... */

